更新忽略文件

--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,7 @@
 /dist
 /python2
 /pyelliptic.egg-info
-build/qt5GUI/out00-Analysis.toc
-build/qt5GUI/out00-EXE.toc
-build/qt5GUI/out00-PKG.pkg
-build/qt5GUI/out00-PKG.toc
-build/qt5GUI/out00-PYZ.pyz
-build/qt5GUI/out00-PYZ.toc
-build/qt5GUI/out00-Tree.toc
-build/qt5GUI/qt5GUI.exe.manifest
-build/qt5GUI/warnqt5GUI.txt
-build/qt5GUI/pyelliptic-1.5.10-py2.7.egg/EGG-INFO/dependency_links.txt
-build/qt5GUI/pyelliptic-1.5.10-py2.7.egg/EGG-INFO/PKG-INFO
-build/qt5GUI/pyelliptic-1.5.10-py2.7.egg/EGG-INFO/SOURCES.txt
-build/qt5GUI/pyelliptic-1.5.10-py2.7.egg/EGG-INFO/top_level.txt
-build/qt5GUI/pyelliptic-1.5.10-py2.7.egg/EGG-INFO/zip-safe
-build/qt5GUI/pyelliptic-1.5.10-py2.7.egg/pyelliptic/__init__.py
-build/qt5GUI/pyelliptic-1.5.10-py2.7.egg/pyelliptic/__init__.pyc
-build/qt5GUI/pyelliptic-1.5.10-py2.7.egg/pyelliptic/arithmetic.py
-build/qt5GUI/pyelliptic-1.5.10-py2.7.egg/pyelliptic/arithmetic.pyc
-build/qt5GUI/pyelliptic-1.5.10-py2.7.egg/pyelliptic/cipher.py
-build/qt5GUI/pyelliptic-1.5.10-py2.7.egg/pyelliptic/cipher.pyc
-build/qt5GUI/pyelliptic-1.5.10-py2.7.egg/pyelliptic/ecc.py
-build/qt5GUI/pyelliptic-1.5.10-py2.7.egg/pyelliptic/ecc.pyc
-build/qt5GUI/pyelliptic-1.5.10-py2.7.egg/pyelliptic/hash.py
-build/qt5GUI/pyelliptic-1.5.10-py2.7.egg/pyelliptic/hash.pyc
-build/qt5GUI/pyelliptic-1.5.10-py2.7.egg/pyelliptic/openssl.py
-build/qt5GUI/pyelliptic-1.5.10-py2.7.egg/pyelliptic/openssl.pyc
+build
+/.idea
+/venv
+/mainGUI.spec
